fix: make text selection readable
current setup results in low contrast between default text selection background color and text color. to fix this use link-color for text ::selection

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -148,3 +148,8 @@ h1 i.badge, h2 i.badge, h3 i.badge, h4 i.badge, .sidebar-nav i.badge {
   display: block;
   margin: 5px auto 0;
 }
+
+h1, h2, h3, h4, p::selection {
+  background-color: var(--link-color);
+}
+  
